# gym_reversi

./: .gitignore  README.md  __init__.py  setup.cfg
gym_reversi/: __init__.py  register.py  reversi.py
reversi/: reversi.py
test/: test_register.py
