[metadata]
name = gym_reversi
version = 0.1.0
discription = openAI gym env for reversi/othello game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pigooosuke/gym_reversi
author = pigooosuke
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Board Games
    Topic :: Games/Entertainment :: Turn Based Strategy
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = gym, OpenAI-gym, reversi, othello, reinforcement-learning
project_url =
    Bug Tracker = https://github.com/pigooosuke/gym_reversi/issues
    Source = https://github.com/pigooosuke/gym_reversi

[options]
packages = gym_reversi
include_package_data = True
setup_requires =
    setuptools
install_requires =
    gym
    numpy

[options.package_data]
* = *.md
